博客系统实现登录功能的实现以及未登录自动跳转到登录页的功能

--- a/blog-system_front_rear_separation/src/main/webapp/html/blog-list.html
+++ b/blog-system_front_rear_separation/src/main/webapp/html/blog-list.html
@@ -85,7 +85,8 @@
 
 
     </div>
-
+    
+    <script src="../js/app.js"></script>
     <script src = "../js/jquery.min.js">
 
     </script>
@@ -140,6 +141,12 @@
 
         }
         getBlogs();
+
+
+        
+
+        checkBlog();
+
     </script>
 
 
