--- a/blog-system_front_rear_separation/src/main/webapp/html/blog-list.html
+++ b/blog-system_front_rear_separation/src/main/webapp/html/blog-list.html
@@ -26,7 +26,7 @@
 
         <a href="blog-edit.html">写博客</a>
 
-        <a href="#">注销</a>
+        <a href="../logout">注销</a>
 
 
 
@@ -142,11 +142,24 @@
         }
         getBlogs();
 
+        checkLogin();
 
-        
+        function getUserInfo(){
+            
+            $.ajax({
+                type: 'get',
+                url: '../userInfo',
 
-        checkBlog();
+                success: function(body){
+                    let h3 = document.querySelector(".card h3");
 
+                    h3.innerHTML = body.username;
+
+                }
+            })
+
+        }
+        getUserInfo();
     </script>
 
 
